<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompassActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/loca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="？"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".8"
            />


        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="go_back"
            android:text="back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".9"/>

        <Button
            android:id="@+id/clear_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clearDataClicked"
            android:text="Clear Location Data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".82"/>

        <TextView
            android:id="@+id/orienta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Orientation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".2"/>

        <ImageView
            android:id="@+id/me"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/me" />

        <ImageButton
            android:id="@+id/zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="569dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="135dp"
            android:adjustViewBounds="true"
            android:maxWidth="80dp"
            android:onClick="zoom_in"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/clear_data_button"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/plus" />

        <ImageButton
            android:id="@+id/zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="569dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="135dp"
            android:adjustViewBounds="true"
            android:maxWidth="80dp"
            android:maxHeight="80dp"
            android:onClick="zoom_out"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/clear_data_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/minus" />

        <ImageView
            android:id="@+id/ring12"
            android:layout_width="174dp"
            android:layout_height="174dp"
            android:layout_marginStart="118dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="118dp"
            android:layout_marginBottom="100dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/clear_data_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orienta"
            app:srcCompat="@drawable/ring" />

        <ImageView
            android:id="@+id/ring14"
            android:layout_width="87dp"
            android:layout_height="87dp"
            android:layout_marginBottom="-10dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/clear_data_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orienta"
            app:srcCompat="@drawable/ring" />

        <ImageView
            android:id="@+id/ring34"
            android:layout_width="261dp"
            android:layout_height="261dp"
            android:layout_marginBottom="-10dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/clear_data_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orienta"
            app:srcCompat="@drawable/ring" />

        <ImageView
            android:id="@+id/ring13"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/clear_data_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orienta"
            app:srcCompat="@drawable/ring" />

        <ImageView
            android:id="@+id/ring23"
            android:layout_width="232dp"
            android:layout_height="232dp"
            android:layout_marginStart="-5dp"
            android:layout_marginBottom="-10dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/clear_data_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orienta"
            app:srcCompat="@drawable/ring" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/clock_face"
            android:layout_width="345dp"
            android:layout_height="348dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".5"
            app:srcCompat="@drawable/compass_face" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clock_outside"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/letter_n"
            android:elevation="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="23dp"
            app:layout_constraintBottom_toTopOf="@+id/clock_face2"
            app:layout_constraintCircle="@+id/clock_outside"
            app:layout_constraintCircleAngle="0"
            app:layout_constraintCircleRadius="172dp"
            app:layout_constraintEnd_toStartOf="@+id/clock_face2"
            app:layout_constraintStart_toEndOf="@+id/clock_face2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/letter_n"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/walls"
            android:layout_width="660dp"
            android:layout_height="635dp"
            android:layout_marginTop="-8dp"
            android:elevation="1dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/missingmiddle" />

        <ImageView
            android:id="@+id/clock_face2"
            android:layout_width="345dp"
            android:layout_height="348dp"
            android:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".5"
            app:srcCompat="@drawable/compass_face" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/green"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="105dp"
        app:layout_constraintBottom_toTopOf="@+id/clock"
        app:layout_constraintEnd_toStartOf="@+id/friend_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/green_light" />

    <ImageView
        android:id="@+id/red"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="105dp"
        app:layout_constraintBottom_toTopOf="@+id/clock"
        app:layout_constraintEnd_toStartOf="@+id/friend_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/red_light" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="123dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/clock"
        app:layout_constraintEnd_toStartOf="@+id/friend_label"
        app:layout_constraintStart_toEndOf="@+id/green"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
