<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entering_friend_uid">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="153dp"
        android:text="Enter your Friend's UID"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/enter_friend_id_blank"
        android:layout_width="204dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="Your friend's UID"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <Button
        android:id="@+id/add_friend_to_database"
        android:layout_width="116dp"
        android:layout_height="53dp"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="184dp"
        android:onClick="onAddFriendToDatabaseClicked"
        android:text="Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back_to_your_uid"
        android:layout_width="117dp"
        android:layout_height="55dp"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="100dp"
        android:text="Back"
        android:onClick="back_to_showing_uid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>