<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_uid_showing">

    <Button
        android:id="@+id/to_compass_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="144dp"
        android:text="Continue"
        android:onClick="proceed_to_compass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="153dp"
        android:text="Use it to add friends"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="153dp"
        android:text="This is your UID!"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="142dp"
        android:layout_height="47dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="43dp"
        android:text="Your UID"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/your_uid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/your_uid"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="488dp"
        android:gravity="center|center_horizontal"
        android:text="12345678"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/add_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="224dp"
        android:text="Add Friend"
        android:onClick="proceed_to_enter_uid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>